
	* awkgram.y (snode): Make isarray not scalarize untyped parameters
	also.
	* profile.c (pprint): Add Op_push_arg_untyped.

	Improve debugger support for typed regexps.
	Thanks to Hermann Peifer for the bug report.

	* awkgram.y (valinfo): Add support for Node_typedregex.
	* debug.c (watchpoint_triggerred): Handle Node_typedregex.
	(initialize_watch_item): Ditto.
	(print_memory): Ditto.

2015-06-21         Arnold D. Robbins     <arnold@skeeve.com>

	Fixes for typeof - Don't let typeof change an untyped variable
	into a scalar.

	* awk.h (opcodeval): Add Op_push_arg_untyped.
	* awkgram.y (snode): Separate out case for do_typeof, use
	Op_push_arg_untyped.
	* builtin.c (do_typeof): Arg will be equal to Nnull_string
	if it's untyped.
	* eval.c (optypes): Add Op_push_arg_untyped.
	* interpret.h (r_interpret): Add Op_push_arg_untyped handling.

2015-06-19         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_isarray): Minor edit to lint warning.
	* TODO: Updated.

2015-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex_internal.h, regexec.c: Sync with GLIBC.

	Unrelated:

	* regex_internal.c, regexec.c: __attribute --> __attribute__.

	Related:

	* regex_internal.h: Clean up defines for non-GCC for attribute;
	essentially sync it with GLIBC.

2015-06-12         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y: Finish converting "hard" regex to "typed" regex.

2015-05-31         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (posix_def_parse_field): Removed. It's no longer
	needed after updates to the POSIX standard. Thanks to
	Michael Klement <michael.klement@usa.net> for pointing this out.

2015-05-26  Paul Eggert  <eggert@Penguin.CS.UCLA.EDU>

	* floatcomp.c (count_trailing_zeros): New function.
	This compiles to a single TZCNT instruction on the x86-64.
	(adjust_uint): Use it to keep more high-order bits when
	some of the lowest-order bits are zero.  This implements